{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 26,
  "lineage": "14a11acc-8c4c-1b05-01b8-6019cf78820e",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:482522784946:network-acl/acl-0a473aa414cc98ab7",
            "default_network_acl_id": "acl-0a473aa414cc98ab7",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0a473aa414cc98ab7",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "482522784946",
            "subnet_ids": [
              "subnet-05b72983855a14cb8",
              "subnet-062149bf2187660b1",
              "subnet-08ecc77225ca6d7ec",
              "subnet-0ed8d6e5f73b94899",
              "subnet-0f49ab2518533bb3f",
              "subnet-0f4dcc0a65e5986c7"
            ],
            "tags": {
              "Name": "vpc-terraform-srishti26work-stage-default",
              "environment": "stage",
              "owners": "srishti26work"
            },
            "tags_all": {
              "Name": "vpc-terraform-srishti26work-stage-default",
              "environment": "stage",
              "owners": "srishti26work"
            },
            "vpc_id": "vpc-0de0127feda81a6e4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:482522784946:route-table/rtb-037a59b866f07c06b",
            "default_route_table_id": "rtb-037a59b866f07c06b",
            "id": "rtb-037a59b866f07c06b",
            "owner_id": "482522784946",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "vpc-terraform-srishti26work-stage-default",
              "environment": "stage",
              "owners": "srishti26work"
            },
            "tags_all": {
              "Name": "vpc-terraform-srishti26work-stage-default",
              "environment": "stage",
              "owners": "srishti26work"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0de0127feda81a6e4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:482522784946:security-group/sg-07eb1561c3b9c5a7d",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-07eb1561c3b9c5a7d",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "482522784946",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vpc-terraform-srishti26work-stage-default",
              "environment": "stage",
              "owners": "srishti26work"
            },
            "tags_all": {
              "Name": "vpc-terraform-srishti26work-stage-default",
              "environment": "stage",
              "owners": "srishti26work"
            },
            "vpc_id": "vpc-0de0127feda81a6e4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ec8ee0a64c90335f",
            "arn": "arn:aws:ec2:ap-south-1:482522784946:elastic-ip/eipalloc-0ec8ee0a64c90335f",
            "domain": "vpc",
            "id": "eipalloc-0ec8ee0a64c90335f",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-3-6-112-36.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.6.112.36",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "vpc-terraform-srishti26work-stage-ap-south-1a",
              "environment": "stage",
              "owners": "srishti26work"
            },
            "tags_all": {
              "Name": "vpc-terraform-srishti26work-stage-ap-south-1a",
              "environment": "stage",
              "owners": "srishti26work"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:482522784946:internet-gateway/igw-02709e7c19383635d",
            "id": "igw-02709e7c19383635d",
            "owner_id": "482522784946",
            "tags": {
              "Name": "vpc-terraform-srishti26work-stage",
              "environment": "stage",
              "owners": "srishti26work"
            },
            "tags_all": {
              "Name": "vpc-terraform-srishti26work-stage",
              "environment": "stage",
              "owners": "srishti26work"
            },
            "vpc_id": "vpc-0de0127feda81a6e4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ec8ee0a64c90335f",
            "association_id": "eipassoc-026edab8a7834ff7c",
            "connectivity_type": "public",
            "id": "nat-0ea673b19be50b58a",
            "network_interface_id": "eni-0d5605afae194a09e",
            "private_ip": "10.0.101.94",
            "public_ip": "3.6.112.36",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ed8d6e5f73b94899",
            "tags": {
              "Name": "vpc-terraform-srishti26work-stage-ap-south-1a",
              "environment": "stage",
              "owners": "srishti26work"
            },
            "tags_all": {
              "Name": "vpc-terraform-srishti26work-stage-ap-south-1a",
              "environment": "stage",
              "owners": "srishti26work"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04551e4bbe83a37a31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ea673b19be50b58a",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04551e4bbe83a37a3",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02709e7c19383635d",
            "id": "r-rtb-0d79ce573d754f4881080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d79ce573d754f488",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:482522784946:route-table/rtb-02e49668b5eba4484",
            "id": "rtb-02e49668b5eba4484",
            "owner_id": "482522784946",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vpc-terraform-srishti26work-stage-db",
              "environment": "stage",
              "owners": "srishti26work"
            },
            "tags_all": {
              "Name": "vpc-terraform-srishti26work-stage-db",
              "environment": "stage",
              "owners": "srishti26work"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de0127feda81a6e4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:482522784946:route-table/rtb-04551e4bbe83a37a3",
            "id": "rtb-04551e4bbe83a37a3",
            "owner_id": "482522784946",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vpc-terraform-srishti26work-stage-private",
              "environment": "stage",
              "owners": "srishti26work"
            },
            "tags_all": {
              "Name": "vpc-terraform-srishti26work-stage-private",
              "environment": "stage",
              "owners": "srishti26work"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de0127feda81a6e4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:482522784946:route-table/rtb-0d79ce573d754f488",
            "id": "rtb-0d79ce573d754f488",
            "owner_id": "482522784946",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vpc-terraform-srishti26work-stage-public",
              "environment": "stage",
              "owners": "srishti26work"
            },
            "tags_all": {
              "Name": "vpc-terraform-srishti26work-stage-public",
              "environment": "stage",
              "owners": "srishti26work"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de0127feda81a6e4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0257c4ec69e48ca0c",
            "route_table_id": "rtb-02e49668b5eba4484",
            "subnet_id": "subnet-08ecc77225ca6d7ec"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e4c5ea0d6a89b657",
            "route_table_id": "rtb-02e49668b5eba4484",
            "subnet_id": "subnet-05b72983855a14cb8"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c275d04ae70ecd3a",
            "route_table_id": "rtb-04551e4bbe83a37a3",
            "subnet_id": "subnet-0f4dcc0a65e5986c7"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04705481fa147bf4d",
            "route_table_id": "rtb-04551e4bbe83a37a3",
            "subnet_id": "subnet-0f49ab2518533bb3f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-083f7397496bfcd0a",
            "route_table_id": "rtb-0d79ce573d754f488",
            "subnet_id": "subnet-0ed8d6e5f73b94899"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0acf30bb829d5b2f9",
            "route_table_id": "rtb-0d79ce573d754f488",
            "subnet_id": "subnet-062149bf2187660b1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:482522784946:subnet/subnet-08ecc77225ca6d7ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.151.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08ecc77225ca6d7ec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "482522784946",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC Private Database Subnets",
              "environment": "stage",
              "owners": "srishti26work"
            },
            "tags_all": {
              "Name": "VPC Private Database Subnets",
              "environment": "stage",
              "owners": "srishti26work"
            },
            "vpc_id": "vpc-0de0127feda81a6e4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:482522784946:subnet/subnet-05b72983855a14cb8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.152.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b72983855a14cb8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "482522784946",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC Private Database Subnets",
              "environment": "stage",
              "owners": "srishti26work"
            },
            "tags_all": {
              "Name": "VPC Private Database Subnets",
              "environment": "stage",
              "owners": "srishti26work"
            },
            "vpc_id": "vpc-0de0127feda81a6e4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:482522784946:subnet/subnet-0f4dcc0a65e5986c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f4dcc0a65e5986c7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "482522784946",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC Private Subnets",
              "environment": "stage",
              "owners": "srishti26work"
            },
            "tags_all": {
              "Name": "VPC Private Subnets",
              "environment": "stage",
              "owners": "srishti26work"
            },
            "vpc_id": "vpc-0de0127feda81a6e4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:482522784946:subnet/subnet-0f49ab2518533bb3f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f49ab2518533bb3f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "482522784946",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC Private Subnets",
              "environment": "stage",
              "owners": "srishti26work"
            },
            "tags_all": {
              "Name": "VPC Private Subnets",
              "environment": "stage",
              "owners": "srishti26work"
            },
            "vpc_id": "vpc-0de0127feda81a6e4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:482522784946:subnet/subnet-0ed8d6e5f73b94899",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ed8d6e5f73b94899",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "482522784946",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC Public Subnets",
              "environment": "stage",
              "owners": "srishti26work"
            },
            "tags_all": {
              "Name": "VPC Public Subnets",
              "environment": "stage",
              "owners": "srishti26work"
            },
            "vpc_id": "vpc-0de0127feda81a6e4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:482522784946:subnet/subnet-062149bf2187660b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-062149bf2187660b1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "482522784946",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC Public Subnets",
              "environment": "stage",
              "owners": "srishti26work"
            },
            "tags_all": {
              "Name": "VPC Public Subnets",
              "environment": "stage",
              "owners": "srishti26work"
            },
            "vpc_id": "vpc-0de0127feda81a6e4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:482522784946:vpc/vpc-0de0127feda81a6e4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a473aa414cc98ab7",
            "default_route_table_id": "rtb-037a59b866f07c06b",
            "default_security_group_id": "sg-07eb1561c3b9c5a7d",
            "dhcp_options_id": "dopt-00b8fb169cdf431ef",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0de0127feda81a6e4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-037a59b866f07c06b",
            "owner_id": "482522784946",
            "tags": {
              "Name": "vpc-terraform-srishti26work-stage",
              "environment": "stage",
              "owners": "srishti26work"
            },
            "tags_all": {
              "Name": "vpc-terraform-srishti26work-stage",
              "environment": "stage",
              "owners": "srishti26work"
            }
          }
        }
      ]
    }
  ]
}